--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ anyhow = "1.0.75"
 thiserror = "1.0.49"
 specta = "1.0.5"
 tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
+sysinfo = "0.29.10"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
