--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tauri-apps/api": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "jotai": "^2.5.0",
     "lucide-react": "^0.287.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
