--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ thiserror = "1.0.49"
 specta = "1.0.5"
 tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
 sysinfo = "0.29.10"
+enigo = "0.1.3"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
