tiny bit faster launch

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "tauri-template"
+name = "lol-account-swap"
 version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "An application to swap between multiple League of Legends accounts."
+authors = ["ponbac"]
 license = ""
 repository = ""
 edition = "2021"
