--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@fontsource-variable/jetbrains-mono": "^5.0.18",
+    "@fontsource-variable/jetbrains-mono": "^5.0.19",
     "@fontsource/poppins": "^5.0.8",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -21,30 +21,31 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@tanstack/react-query": "5.12.1",
-    "@tanstack/react-query-devtools": "5.12.1",
-    "@tauri-apps/api": "^1.5.1",
+    "@tanstack/react-query": "5.18.1",
+    "@tanstack/react-query-devtools": "5.18.1",
+    "@tauri-apps/api": "^1.5.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "jotai": "^2.6.0",
-    "lucide-react": "^0.294.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
+    "jotai": "^2.6.4",
+    "lucide-react": "^0.321.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.7",
-    "@types/node": "^20.10.2",
-    "@types/react": "^18.2.40",
-    "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.4"
+    "@tauri-apps/cli": "^1.5.9",
+    "@types/node": "^20.11.16",
+    "@types/react": "^18.2.51",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.12"
   }
 }
