--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,17 +10,21 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5.0", features = [] }
+tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
-tauri = { version = "1.5.3", features = [ "updater", "dialog-open", "shell-open"] }
+tauri = { version = "1.5.4", features = [
+    "updater",
+    "dialog-open",
+    "shell-open",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-anyhow = "1.0.75"
-thiserror = "1.0.49"
+anyhow = "1.0.79"
+thiserror = "1.0.56"
 specta = "1.0.5"
 tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
-sysinfo = "0.29.10"
+sysinfo = "0.30.5"
 enigo = "0.1.3"
 clipboard-win = "5.0.0"
 
@@ -31,4 +35,4 @@ custom-protocol = ["tauri/custom-protocol"]
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
-tokio = { version = "1.34.0", features = ["full"] }
+tokio = { version = "1.36.0", features = ["full"] }
