--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,3 +36,7 @@ custom-protocol = ["tauri/custom-protocol"]
 [dev-dependencies]
 pretty_assertions = "1.4.0"
 tokio = { version = "1.36.0", features = ["full"] }
+
+[profile.dev]
+debug = 0
+strip = "debuginfo"
