--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,23 +10,27 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5.1", features = [] }
+tauri-build = { version = "2.0.3", features = [] }
 
 [dependencies]
-tauri = { version = "1.5.4", features = [
-    "updater",
-    "dialog-open",
-    "shell-open",
+tauri = { version = "2.1.1", features = [] }
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.132"
+anyhow = "1.0.93"
+thiserror = "2.0.3"
+specta = "2.0.0-rc.20"
+tauri-specta = { version = "2.0.0-rc.20", features = [
+    "javascript",
+    "typescript",
 ] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-anyhow = "1.0.79"
-thiserror = "1.0.56"
-specta = "1.0.5"
-tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
-sysinfo = "0.30.5"
+sysinfo = "0.32.0"
 enigo = "0.1.3"
-clipboard-win = "5.2.0"
+clipboard-win = "5.4.0"
+tauri-plugin-shell = "2.0.2"
+tauri-plugin-dialog = "2.0.3"
+time = "0.3.36"
+specta-typescript = "0.0.7"
+open = "5.3.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
@@ -34,9 +38,12 @@ clipboard-win = "5.2.0"
 custom-protocol = ["tauri/custom-protocol"]
 
 [dev-dependencies]
-pretty_assertions = "1.4.0"
-tokio = { version = "1.36.0", features = ["full"] }
+pretty_assertions = "1.4.1"
+tokio = { version = "1.41.1", features = ["full"] }
 
 [profile.dev]
 debug = 0
 strip = "debuginfo"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
